<resources>
    <string name="app_name">The Tutoring App</string>
    <string name="email">email</string>
    <string name="pass">pass</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="choice">Are you a Student or a Tutor?</string>
    <string name="student">I am a student</string>
    <string name="tutor">I am a tutor</string>

    <string name="first">Enter First Name</string>
    <string name="last">Enter Last Name</string>
    <string name="education">Enter Education Level</string>
    <string name="password">Enter Password</string>
    <string name="enteremail">Enter Email</string>
    <string name="salary">Enter Desired Salary</string>
    <string name="phone">Enter Phone Number</string>

    <string name="subject">Enter Subjects You Tutor</string>

    <string name="photo">Take a photo of a problem</string>
    <string name="find">Find a tutor</string>
    <string name="settings">Settings</string>
    <string name="msg">Messages</string>

    <string name="request">View Requests</string>
    <string name="viewPhotos">View Photos</string>

    <string name="takephoto">Take a Photo</string>
    <string name="share">Share Photo</string>

    <string name="search">Search for Subject</string>

    <string name="report">Report a Tutor</string>
    <string name="rate">Rate a Tutor</string>
    <string name="user">Change your name</string>
    <string name="color">Change color of dashboard</string>
    <string name="delete">Permanently delete your account</string>
    <string name="confirm">Confirm Report</string>

    <string name="reportStudent">Report a Student</string>

    <string name="friends">Tutors List</string>

    <string name="chooseReport">What tutor do you want to report?</string>
    <string name="changeName">What do you want to change your name to?</string>
    <string name="changeColor">What Color would you like your dashboard to be?</string>
    <string name="confirmDelete">Are you sure that you want to delete your account?</string>

    <string name="requestFriend">Send Request</string>

    <string name="findTutors">Find Tutors</string>

    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="payrate">Enter your hourly rate</string>

    <string name="logout">Log Out</string>

    <string name="sendMessage">Send Message</string>


</resources>
