<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#00CCCC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".s_settings">

    <Button
        android:id="@+id/button11"
        android:layout_width="210dp"
        android:layout_height="110dp"
        android:background="#a9fbfc"
        android:onClick="report"
        android:text="@string/report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <Button
        android:id="@+id/button13"
        android:layout_width="210dp"
        android:layout_height="110dp"
        android:layout_marginBottom="68dp"
        android:background="#a9fbfc"
        android:onClick="deleteAccount"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17"
        app:layout_constraintVertical_bias="0.648" />

    <Button
        android:id="@+id/button17"
        android:layout_width="210dp"
        android:layout_height="110dp"
        android:background="#a9fbfc"
        android:onClick="logOut"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        app:layout_constraintVertical_bias="0.165"
        tools:text="@string/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>